--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
 altgraph==0.17
-certifi==2019.11.28
+certifi==2020.4.5.1
 chardet==3.0.4
 fbs==0.8.6
 future==0.18.2
 idna==2.9
 macholib==1.14
 pefile==2019.4.18
-py2exe==0.9.2.2
 PyInstaller==3.4
-PySide2==5.14.2
-python-dotenv==0.12.0
+PyInstaller-Hooks==20200406
+PySide2==5.12.2
 pywin32-ctypes==0.2.0
 requests==2.23.0
-shiboken2==5.14.2
+shiboken2==5.12.2
 urllib3==1.25.8
